# flashq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py  results.json
examples/: advanced.py  basic.py  fastapi_app.py
flashq/: __init__.py  __main__.py  _version.py  app.py  cli.py  demo.py  dlq.py  enums.py  exceptions.py  middleware.py  models.py  scheduler.py  serializers.py  task.py  worker.py
flashq/backends/: __init__.py  postgres.py  redis.py  sqlite.py
flashq/contrib/: __init__.py  django.py  fastapi.py
flashq/dashboard/: __init__.py
tests/: e2e_smoke.py  test_cli.py  test_core.py  test_dashboard.py  test_dlq.py  test_edge_cases.py  test_middleware.py  test_scheduler.py  test_serializers.py  test_worker.py
